--- a/src/app/pages/attendance/attendance.scss
+++ b/src/app/pages/attendance/attendance.scss
@@ -31,6 +31,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  margin-top: 50px;
 
   // 🔹 Title
   .title {
