--- a/src/app/pages/penalty-management/penalty-management.scss
+++ b/src/app/pages/penalty-management/penalty-management.scss
@@ -31,6 +31,7 @@
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  margin-top: 50px;
 
   h2 {
     font-size: 1.8rem;
