--- a/src/app/pages/scanner/scanner.scss
+++ b/src/app/pages/scanner/scanner.scss
@@ -32,6 +32,7 @@
   align-items: center;
   gap: 2rem;
   padding: 2rem;
+  margin-top: 50px;
 
   // Video Card
   .video-card {
