--- a/src/app/pages/users/users.scss
+++ b/src/app/pages/users/users.scss
@@ -34,7 +34,8 @@
   gap: 1rem;
   margin-bottom: 1.8rem;
   padding: 1rem 1.2rem;
-  position: sticky;
+  // position: sticky;
+  margin-top: 60px;
   top: 110px; /* below breadcrumb */
   background: #f9fafb;
   z-index: 9;
